tests for update